--- a/src/main/resources/templates/image/gallery.html
+++ b/src/main/resources/templates/image/gallery.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" th:href="@{/css/pages/gallery.css}" />
 	</head>
 	<body>
-		<div layout:fragment="content" class="container">
+		<div layout:fragment="content">
 			<div class="row mb-3">
 				<div class="col-12">
 					<div id="links">
