--- a/src/main/resources/templates/info/points_freq.html
+++ b/src/main/resources/templates/info/points_freq.html
@@ -5,7 +5,7 @@
 		<title th:text="#{pointsfrequency.title}"></title>
 	</head>
 	<body>
-		<div layout:fragment="content" class="container">
+		<div layout:fragment="content">
 			<h1 th:text="#{pointsfrequency.title}"></h1>
 			<span th:text="#{pointsfrequency.title2}"></span>
 
