--- a/src/main/resources/templates/image/image_group.html
+++ b/src/main/resources/templates/image/image_group.html
@@ -4,7 +4,7 @@
 		<title th:text="#{image.group.title}"></title>
 	</head>
 	<body>
-		<div layout:fragment="content" class="container">
+		<div layout:fragment="content">
             <form th:action="@{/imagegroup/delete}" th:object="${imageGroupCommand}" method="post" role="form">
                 <div class="row">
                     <div class="col-12 col-sm-3 col-md-2">
