--- a/src/main/resources/templates/image/image_upload.html
+++ b/src/main/resources/templates/image/image_upload.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" th:href="@{/css/pages/image_upload.css}" />
 	</head>
 	<body>
-		<div layout:fragment="content" class="container">
+		<div layout:fragment="content">
             <form th:action="@{/image/upload}" th:object="${imageUploadCommand}" method="post" enctype="multipart/form-data" role="form">
                 <div class="row">
                     <div class="col-12 col-sm-3 col-md-2">
