--- a/src/main/resources/templates/info/edit_info.html
+++ b/src/main/resources/templates/info/edit_info.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" th:href="@{/summernote-0.8.18/summernote-lite.min.css}" />
 	</head>
 	<body>
-		<div layout:fragment="content" class="container">
+		<div layout:fragment="content">
 			<form id="editInfoForm" th:action="@{/info/editinfo}" th:object="${infoCommand}" method="post" role="form">
 				<div class="row">
 					<div class="col-xs-12">
