--- a/src/main/resources/templates/registration/registration.html
+++ b/src/main/resources/templates/registration/registration.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" th:href="@{/css/pages/registration.css}" />
 </head>
 <body>
-<div layout:fragment="content" class="container">
+<div layout:fragment="content">
 	<h2 th:text="#{registration.text}"></h2>
 	<form id="registrationForm" th:action="@{/registration}" th:object="${registrationCommand}" action="#" method="post" role="form">
 		<div class="alert alert-danger" th:if="${#fields.hasErrors('global')}" th:errors="*{global}"></div>
