--- a/src/main/resources/templates/fragments/language_selector.html
+++ b/src/main/resources/templates/fragments/language_selector.html
@@ -13,7 +13,7 @@
                 <li><a th:href="${@languageUtil.buildUrl('pl')}" class="dropdown-item language"><img src="/images/lang/pl.png" th:text="' '+#{language.pl}" /></a></li>
                 <li><a th:href="${@languageUtil.buildUrl('es')}" class="dropdown-item language"><img src="/images/lang/es.png" th:text="' '+#{language.es}" /></a></li>
                 <li><a th:href="${@languageUtil.buildUrl('ca')}" class="dropdown-item language"><img src="/images/lang/ca.png" th:text="' '+#{language.ca}" /></a></li>
-                <li><a th:href="${@languageUtil.buildUrl('cze')}" class="dropdown-item language"><img src="/images/lang/cze.png" th:text="' '+#{language.cze}" /></a></li>
+                <li><a th:href="${@languageUtil.buildUrl('cze')}" class="dropdown-item language"><img src="/images/lang/cze.png" th:text="' '+#{language.cs}" /></a></li>
                 <li><a th:href="${@languageUtil.buildUrl('sv')}" class="dropdown-item language"><img src="/images/lang/sv.png" th:text="' '+#{language.sv}" /></a></li>
             </ul>
         </li>
