--- a/src/main/resources/templates/bet/extra_bets.html
+++ b/src/main/resources/templates/bet/extra_bets.html
@@ -17,7 +17,7 @@
 						</div>
 						<div class="card-body">
 							<select th:field="*{finalWinner}" class="form-select" th:disabled="${!@bettingWebUtil.isBettable()}">
-							  <option th:each="country : ${availableCountriesExtraBets}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
+							  <option th:each="country : ${availableCountriesExtraBets}" th:value="${country}" th:text="#{${'country.' + country.alpha3Code}}"></option>
 							</select>
 						</div>
 					</div>
@@ -30,7 +30,7 @@
 						</div>
 						<div class="card-body">
 							<select th:field="*{semiFinalWinner}" class="form-select" th:disabled="${!@bettingWebUtil.isBettable()}">
-                                <option th:each="country : ${availableCountriesExtraBets}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
+                                <option th:each="country : ${availableCountriesExtraBets}" th:value="${country}" th:text="#{${'country.' + country.alpha3Code}}"></option>
 							</select>
 						</div>
 					</div>
@@ -43,7 +43,7 @@
 						</div>
 						<div class="card-body">
 							<select th:field="*{thirdFinalWinner}" class="form-select" th:disabled="${!@bettingWebUtil.isBettable()}">
-                                <option th:each="country : ${availableCountriesExtraBets}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
+                                <option th:each="country : ${availableCountriesExtraBets}" th:value="${country}" th:text="#{${'country.' + country.alpha3Code}}"></option>
 							</select>
 						</div>
 					</div>
