--- a/src/main/resources/templates/matches/edit.html
+++ b/src/main/resources/templates/matches/edit.html
@@ -17,12 +17,12 @@
 						<div class="row">
 							<div class="col-6">
 								<select th:field="*{countryTeamOne}" class="form-select">
-								  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
+								  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.alpha3Code}}"></option>
 								</select>
 							</div>
 							<div class="col-6">
 								<select th:field="*{countryTeamTwo}" class="form-select">
-								  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
+								  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.alpha3Code}}"></option>
 								</select>
 							</div>
 						</div>
