--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -13,10 +13,10 @@
                         <div class="card-header">
                             <div class="row">
                                 <div class="col-12">
-                                    <img class="flag" th:if="${allBetsCommand.getIconPathTeamOne() != null}" th:src="@{${allBetsCommand.getIconPathTeamOne()}}"/>
+                                    <span class="fi" th:classappend="${@countryIconUtil.cssClassFor(allBetsCommand.getCountryTeamOne())}"></span>
                                     <span class="fw-bold" th:text="${allBetsCommand.teamNameOne}"></span>
                                     <span> - </span>
-                                    <img class="flag" th:if="${allBetsCommand.getIconPathTeamTwo() != null}" th:src="@{${allBetsCommand.getIconPathTeamTwo()}}"/>
+                                    <span class="fi" th:classappend="${@countryIconUtil.cssClassFor(allBetsCommand.getCountryTeamTwo())}"></span>
                                     <span class="fw-bold" th:text="${allBetsCommand.teamNameTwo}"></span>
                                     <br/>
                                     <span th:text="${#temporals.format(allBetsCommand.kickOffDate, 'EEE dd. MMMM yyyy HH:mm')}"></span>
