--- a/src/main/resources/templates/matches/edit.html
+++ b/src/main/resources/templates/matches/edit.html
@@ -13,16 +13,16 @@
 				<div class="col-12 col-sm-6 col-md-4">
 					<input type="hidden" th:field="*{matchId}" />
 					<div class="form-group mb-3">
-						<label th:text="#{matches.form.chooseCountry} + ':'"></label><br/>
+						<label class="form-label" th:text="#{matches.form.chooseCountry} + ':'"></label><br/>
 						<div class="row">
 							<div class="col-6">
 								<select th:field="*{countryTeamOne}" class="form-select">
-								  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.alpha3Code}}"></option>
+                                    <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.alpha3Code}}"></option>
 								</select>
 							</div>
 							<div class="col-6">
 								<select th:field="*{countryTeamTwo}" class="form-select">
-								  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.alpha3Code}}"></option>
+                                    <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.alpha3Code}}"></option>
 								</select>
 							</div>
 						</div>
@@ -30,7 +30,7 @@
 						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('countryTeamTwo')}" th:errors="*{countryTeamTwo}">countryTeamTwo error</p>
 					</div>
 					<div class="form-group mb-3">
-						<label th:text="#{matches.form.teamNames} + ':'"></label>
+						<label class="form-label" th:text="#{matches.form.teamNames} + ':'"></label>
 						<a href="#" onclick="clearTeamNameFields()"><i class="fas fa-times-circle" aria-hidden="true"></i></a>
 						<br/>
 						<div class="row">
@@ -45,18 +45,18 @@
 						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('teamNameTwo')}" th:errors="*{teamNameTwo}">teamNameTwo error</p>
 					</div>
 					<div class="form-group mb-3">
-		                <label for="kickOffDate" th:text="#{matches.form.kickOff} + ':'"></label>
+		                <label class="form-label" for="kickOffDate" th:text="#{matches.form.kickOff} + ':'"></label>
 						<input type="datetime-local" id="kickOffDate" th:field="*{kickOffDate}" />
 						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('kickOffDate')}" th:errors="*{kickOffDate}">kickOffDate error</p>
 		            </div>
 					<div class="form-group mb-3">
-						<label for="stadium" th:text="#{matches.form.stadium} + ':'"></label>
+						<label class="form-label" for="stadium" th:text="#{matches.form.stadium} + ':'"></label>
 						<input id="stadium" type="text" th:field="*{stadium}" class="form-control" placeholder="z.B. St. Denis, Paris" />
 						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('stadium')}" th:errors="*{stadium}">stadium error</p>
 					</div>
 					<div class="form-group mb-3">
-						<label for="group" th:text="#{matches.form.group} + ':'"></label>
-						<select id="group" th:field="*{group}" class="form-control">
+						<label class="form-label" for="group" th:text="#{matches.form.group} + ':'"></label>
+						<select id="group" th:field="*{group}" class="form-select">
 						  <option th:each="gr : ${availableGroups}" th:value="${gr}" th:text="#{${'group.entry.' + gr}}"></option>
 						</select>
 						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('group')}" th:errors="*{group}">group error</p>
