--- a/src/main/resources/templates/matches/matchresult.html
+++ b/src/main/resources/templates/matches/matchresult.html
@@ -49,7 +49,7 @@
 								<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('teamResultTwo')}" th:errors="*{teamResultTwo}">teamResultTwo error</p>
 							</div>
 						</div>
-						<div class="row center" mb-3>
+						<div class="row center">
 							<div class="col-6">
 								<button type="button" class="btn btn-secondary vote" onclick="oneCountUp()"><i class="fas fa-chevron-up" aria-hidden="true"></i></button>
 								<button type="button" class="btn btn-secondary vote" onclick="oneCountDown()"><i class="fas fa-chevron-down" aria-hidden="true"></i></button>
@@ -59,16 +59,18 @@
 								<button type="button" class="btn btn-secondary vote" onclick="twoCountDown()"><i class="fas fa-chevron-down" aria-hidden="true"></i></button>
 							</div>
 						</div>
-						<div id="penaltyBox" th:if="${!matchResultCommand.isGroupMatch()}">
-							<div class="row no-left-right-margin">
-								<span class="bold" th:text="#{penalty.box.heading}"></span>
+						<div class="mt-3" id="penaltyBox" th:if="${!matchResultCommand.isGroupMatch()}">
+							<div class="row">
+                                <div class="col-12">
+								    <span class="fw-bold" th:text="#{penalty.box.heading}"></span>
+                                </div>
 							</div>
-							<div class="row center color-result penalty-height no-left-right-margin">
-								<div class="col-6">
-									<input type="radio" th:field="*{penaltyWinnerOne}" value="true" />
+							<div class="row center">
+								<div class="col-6 mt-3 mb-3">
+									<input class="form-check-input" type="radio" th:field="*{penaltyWinnerOne}" value="true" />
 								</div>
-								<div class="col-6">
-									<input type="radio" th:field="*{penaltyWinnerOne}" value="false" />
+								<div class="col-6 mt-3 mb-3">
+									<input class="form-check-input" type="radio" th:field="*{penaltyWinnerOne}" value="false" />
 								</div>
 							</div>
 						</div>
