refactoring language selection

--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -233,16 +233,51 @@
                 <li class="nav-item dropdown me-2">
                     <a class="nav-link dropdown-toggle" th:classappend="${classes}" id="language" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">
-                        <img th:src="${@languageUtil.getImageLanguageIconPath()}" />
+                        <span class="fi" th:classappend="${@countryIconUtil.cssClassCurrentUserLanguage()}"></span>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="language">
-                        <li><a th:href="${@languageUtil.buildUrl('de')}" class="dropdown-item language"><img src="/images/lang/de.png" th:text="' '+#{language.de}" alt="de"/></a></li>
-                        <li><a th:href="${@languageUtil.buildUrl('en')}" class="dropdown-item language"><img src="/images/lang/en.png" th:text="' '+#{language.en}" alt="en"/></a></li>
-                        <li><a th:href="${@languageUtil.buildUrl('pl')}" class="dropdown-item language"><img src="/images/lang/pl.png" th:text="' '+#{language.pl}" alt="pl"/></a></li>
-                        <li><a th:href="${@languageUtil.buildUrl('es')}" class="dropdown-item language"><img src="/images/lang/es.png" th:text="' '+#{language.es}" alt="es"/></a></li>
-                        <li><a th:href="${@languageUtil.buildUrl('ca')}" class="dropdown-item language"><img src="/images/lang/ca.png" th:text="' '+#{language.ca}" alt="ca"/></a></li>
-                        <li><a th:href="${@languageUtil.buildUrl('cs')}" class="dropdown-item language"><img src="/images/lang/cs.png" th:text="' '+#{language.cs}" alt="cs"/></a></li>
-                        <li><a th:href="${@languageUtil.buildUrl('sv')}" class="dropdown-item language"><img src="/images/lang/sv.png" th:text="' '+#{language.sv}" alt="sv"/></a></li>
+                        <li>
+                            <a th:href="${@languageUtil.buildUrl('de')}" class="dropdown-item language">
+                                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('de')}"></span>
+                                <span th:text="' '+#{language.de}"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="${@languageUtil.buildUrl('en')}" class="dropdown-item language">
+                                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('gb')}"></span>
+                                <span th:text="' '+#{language.en}"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="${@languageUtil.buildUrl('pl')}" class="dropdown-item language">
+                                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('pl')}"></span>
+                                <span th:text="' '+#{language.pl}"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="${@languageUtil.buildUrl('es')}" class="dropdown-item language">
+                                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('es')}"></span>
+                                <span th:text="' '+#{language.es}"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="${@languageUtil.buildUrl('ca')}" class="dropdown-item language">
+                                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('ca')}"></span>
+                                <span th:text="' '+#{language.ca}"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="${@languageUtil.buildUrl('cs')}" class="dropdown-item language">
+                                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('cz')}"></span>
+                                <span th:text="' '+#{language.cs}"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="${@languageUtil.buildUrl('sv')}" class="dropdown-item language">
+                                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('sv')}"></span>
+                                <span th:text="' '+#{language.sv}"></span>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <span class="navbar-text me-3" th:text="${@webSecurityUtil.getCurrentUsername()}"></span>
