refactoring language selection

--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -236,48 +236,7 @@
                         <span class="fi" th:classappend="${@countryIconUtil.cssClassCurrentUserLanguage()}"></span>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="language">
-                        <li>
-                            <a th:href="${@languageUtil.buildUrl('de')}" class="dropdown-item language">
-                                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('de')}"></span>
-                                <span th:text="' '+#{language.de}"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a th:href="${@languageUtil.buildUrl('en')}" class="dropdown-item language">
-                                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('gb')}"></span>
-                                <span th:text="' '+#{language.en}"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a th:href="${@languageUtil.buildUrl('pl')}" class="dropdown-item language">
-                                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('pl')}"></span>
-                                <span th:text="' '+#{language.pl}"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a th:href="${@languageUtil.buildUrl('es')}" class="dropdown-item language">
-                                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('es')}"></span>
-                                <span th:text="' '+#{language.es}"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a th:href="${@languageUtil.buildUrl('ca')}" class="dropdown-item language">
-                                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('ca')}"></span>
-                                <span th:text="' '+#{language.ca}"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a th:href="${@languageUtil.buildUrl('cs')}" class="dropdown-item language">
-                                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('cz')}"></span>
-                                <span th:text="' '+#{language.cs}"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a th:href="${@languageUtil.buildUrl('sv')}" class="dropdown-item language">
-                                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('sv')}"></span>
-                                <span th:text="' '+#{language.sv}"></span>
-                            </a>
-                        </li>
+                        <li th:replace="~{fragments/language_selector :: language_selector}"></li>
                     </ul>
                 </li>
                 <span class="navbar-text me-3" th:text="${@webSecurityUtil.getCurrentUsername()}"></span>
