--- a/src/main/resources/templates/fragments/language_selector.html
+++ b/src/main/resources/templates/fragments/language_selector.html
@@ -1,21 +1,48 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-	<div th:fragment="language_selector(classes)" th:remove="tag">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" th:classappend="${classes}" href="#" id="language" role="button" data-bs-toggle="dropdown"
-               aria-expanded="false">
-                <img th:src="${@languageUtil.getImageLanguageIconPath()}" />
+	<div th:fragment="language_selector" th:remove="tag">
+        <li>
+            <a th:href="${@languageUtil.buildUrl('de')}" class="dropdown-item language">
+                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('de')}"></span>
+                <span th:text="' '+#{language.de}"></span>
             </a>
-            <ul class="dropdown-menu" aria-labelledby="language">
-                <li><a th:href="${@languageUtil.buildUrl('de')}" class="dropdown-item language"><img src="/images/lang/de.png" th:text="' '+#{language.de}" /></a></li>
-                <li><a th:href="${@languageUtil.buildUrl('en')}" class="dropdown-item language"><img src="/images/lang/en.png" th:text="' '+#{language.en}" /></a></li>
-                <li><a th:href="${@languageUtil.buildUrl('pl')}" class="dropdown-item language"><img src="/images/lang/pl.png" th:text="' '+#{language.pl}" /></a></li>
-                <li><a th:href="${@languageUtil.buildUrl('es')}" class="dropdown-item language"><img src="/images/lang/es.png" th:text="' '+#{language.es}" /></a></li>
-                <li><a th:href="${@languageUtil.buildUrl('ca')}" class="dropdown-item language"><img src="/images/lang/ca.png" th:text="' '+#{language.ca}" /></a></li>
-                <li><a th:href="${@languageUtil.buildUrl('cze')}" class="dropdown-item language"><img src="/images/lang/cze.png" th:text="' '+#{language.cs}" /></a></li>
-                <li><a th:href="${@languageUtil.buildUrl('sv')}" class="dropdown-item language"><img src="/images/lang/sv.png" th:text="' '+#{language.sv}" /></a></li>
-            </ul>
+        </li>
+        <li>
+            <a th:href="${@languageUtil.buildUrl('en')}" class="dropdown-item language">
+                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('gb')}"></span>
+                <span th:text="' '+#{language.en}"></span>
+            </a>
+        </li>
+        <li>
+            <a th:href="${@languageUtil.buildUrl('pl')}" class="dropdown-item language">
+                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('pl')}"></span>
+                <span th:text="' '+#{language.pl}"></span>
+            </a>
+        </li>
+        <li>
+            <a th:href="${@languageUtil.buildUrl('es')}" class="dropdown-item language">
+                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('es')}"></span>
+                <span th:text="' '+#{language.es}"></span>
+            </a>
+        </li>
+        <li>
+            <a th:href="${@languageUtil.buildUrl('ca')}" class="dropdown-item language">
+                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('ca')}"></span>
+                <span th:text="' '+#{language.ca}"></span>
+            </a>
+        </li>
+        <li>
+            <a th:href="${@languageUtil.buildUrl('cs')}" class="dropdown-item language">
+                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('cz')}"></span>
+                <span th:text="' '+#{language.cs}"></span>
+            </a>
+        </li>
+        <li>
+            <a th:href="${@languageUtil.buildUrl('sv')}" class="dropdown-item language">
+                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('sv')}"></span>
+                <span th:text="' '+#{language.sv}"></span>
+            </a>
         </li>
 	</div>
 </body>
