--- a/src/main/resources/templates/admin/runtime_settings.html
+++ b/src/main/resources/templates/admin/runtime_settings.html
@@ -36,19 +36,17 @@
                                   th:title="#{administration.runtime.configuration.changePasswordOnFirstLogin.tooltip}"></span>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6">
-                        <div class="mb-2">
-                            <label for="favouriteCountry" class="form-label" th:text="#{administration.runtime.configuration.favouriteCountry} + ':'"></label>
-                            <select id="favouriteCountry" th:field="*{runtimeSettings.favouriteCountry}" class="form-select">
-                                <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.alpha3Code}}"></option>
-                            </select>
-                            <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('runtimeSettings.favouriteCountry')}" th:errors="*{runtimeSettings.favouriteCountry}">favouriteCountry Error</p>
-                        </div>
-                        <div class="mb-2">
-                            <label for="passwordForReset" class="form-label" th:text="#{administration.runtime.configuration.passwordForReset} + ':'"></label>
-                            <input id="passwordForReset" type="text" th:field="*{runtimeSettings.passwordForReset}" class="form-control" />
-                            <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('runtimeSettings.passwordForReset')}" th:errors="*{runtimeSettings.passwordForReset}">passwordForReset Error</p>
-                        </div>
+                    <div class="col-12 col-sm-3 mb-2">
+                        <label for="favouriteCountry" class="form-label" th:text="#{administration.runtime.configuration.favouriteCountry} + ':'"></label>
+                        <select id="favouriteCountry" th:field="*{runtimeSettings.favouriteCountry}" class="form-select">
+                            <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.alpha3Code}}"></option>
+                        </select>
+                        <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('runtimeSettings.favouriteCountry')}" th:errors="*{runtimeSettings.favouriteCountry}">favouriteCountry Error</p>
+                    </div>
+                    <div class="col-12 col-sm-3 mb-2">
+                        <label for="passwordForReset" class="form-label" th:text="#{administration.runtime.configuration.passwordForReset} + ':'"></label>
+                        <input id="passwordForReset" type="text" th:field="*{runtimeSettings.passwordForReset}" class="form-control" />
+                        <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('runtimeSettings.passwordForReset')}" th:errors="*{runtimeSettings.passwordForReset}">passwordForReset Error</p>
                     </div>
                     <div class="col-12 col-sm-6">
                         <div class="row mt-3">
@@ -141,10 +139,10 @@
                             <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('runtimeSettings.imageUploadLimit')}" th:errors="*{runtimeSettings.imageUploadLimit}"></p>
 						</div>
 					</div>
-					<div class="col-12 col-sm-6">
+					<div class="col-12 col-sm-3">
 						<h2 th:text="#{administration.runtime.configuration.registrationCode}"></h2>
                         <div class="form-check">
-                            <input id="selfRegistrationEnabled" type="checkbox" th:field="*{runtimeSettings.selfRegistrationEnabled}" onchange="showHideDetails()" class="form-check-input"/>
+                            <input id="selfRegistrationEnabled" type="checkbox" th:field="*{runtimeSettings.selfRegistrationEnabled}" onchange="triggerCheckboxSelfRegistration()" class="form-check-input"/>
                             <label for="selfRegistrationEnabled" class="form-check-label" th:text="#{administration.runtime.configuration.selfRegistrationEnabled}"></label>
                             <span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top"
                                   th:title="#{administration.runtime.configuration.selfRegistrationEnabled.tooltip}"></span>
